--- a/ProgrammingLanguages/Javascript/LearnJS/index.html
+++ b/ProgrammingLanguages/Javascript/LearnJS/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+    <!-- Base HTML for 41 parts javascript learning lesson. -->
+    <title>Learn Javascript</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--  <script defer src="js/learn_1.js"></script>  -->
+    <!--  To Start learning you need to include lesson you'll learn's file like example below.  -->
+    <script defer src="./js/learn_1.js"></script>
+    <script defer src="./js/learn_22.js"></script>
 
-    <script defer src="js/learn_1.js"></script>
-    <link rel="stlyesheet" href="stlyesheet.css">
-    <title>Learn Javascript</title>
 </head>
 <!--  MAIN BODY   -->
     <body>
@@ -22,8 +22,6 @@
         <!-- Learn_22 lesson only -->
         <div id="destination"><p>Lesson 22: </p></div>
         <!-- END Lesson 22  -->
-
-
 
     </body>
 </html>
