--- a/ProgrammingLanguages/Javascript/LearnJS_HTML/index.html
+++ b/ProgrammingLanguages/Javascript/LearnJS_HTML/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script defer src="./js/clickme.js"></script>
+    <script defer src="./js/1_clickme.js"></script>
+    <script defer src="./js/2_elementNodes.js"></script>
+
 
     <link rel="stylesheet" href="./index.css">
 </head>
@@ -14,7 +16,7 @@
     <br/> <!--break(break 1 line)-->
     <p>Lemons</p> <!--p for paragraph-->
     <h1>uwu</h1> <!--h1, h2, h3, h4 - Header(usually title of page)-->
-    <span id="uwu">I love 2D anime girl</span> <!--descripe a section of html(it does nothing, uses for js id marking)-->
+    <span id="uwu">I love <strong>2D</strong> anime girl</span> <!--descripe a section of html(it does nothing, uses for js id marking)-->
     <div> <!--descripe a big section, bigger than span(intire section of page)-->
         <ul> <!-- un-ordered list-->
             <li>Miko</li> <!-- list member-->
@@ -32,16 +34,18 @@
     <img src="https://i.pinimg.com/originals/ad/57/b3/ad57b367bdd4292b2f4394e6026a03af.jpg" width="30%"/>
     <br/><!--a link tag-->
     <a href="https://i.pinimg.com/originals/ad/57/b3/ad57b367bdd4292b2f4394e6026a03af.jpg">Miko Chan</a>
+    <!-- HTML input attribute -->
+    <input id="input" type="text" value="stuff" tacos="yum">
     <hr/>
 
 <!--css work example-->
     <div> <!--Referencing element from css by id and class-->
         <button id="clickme">I am a button pls click me</button>
         <div> <p>Food i love</p>
-            <ol>
+            <ol id="foodList">
                 <!--class can be reference in css-->
                 <li class="food" id="special">Cheese</li> 
-                <li>Burger</li>
+                <li id="myFood">Burger</li>
                 <li>Ham</li>
                 <li class="food">Lazanya</li>
                 <li>Spaghetti</li>
