feat: documentation update

--- a/ProgrammingLanguages/Javascript/LearnJS/index.html
+++ b/ProgrammingLanguages/Javascript/LearnJS/index.html
@@ -10,6 +10,8 @@
     <!--  To Start learning you need to include lesson you'll learn's file like example below.  -->
     <script defer src="./js/learn_1.js"></script>
     <script defer src="./js/learn_22.js"></script>
+    <script defer src="./js/learn_15.js"></script>
+
 
 </head>
 <!--  MAIN BODY   -->
